apps/librechat-mongodb/service.yaml
# MongoDB Service - cluster internal のみ
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: mongodb
